minor update to responsiveness & button cohesiveness, attempting to resolve issue with images on safari browsers

--- a/src/styles/_Instructions.scss
+++ b/src/styles/_Instructions.scss
@@ -15,8 +15,6 @@
         }
 }
 
-
-
 .userNameInput {
     width: 100%;
         input {
@@ -100,19 +98,25 @@
     left: 3px;
 }
 .topRightCornerImage {
-    rotate: 90deg;
     top: 3px;
     right: 3px;
-}
-.bottomRightCornerImage {
-    rotate: 270deg;
-    bottom: 3px;
-    left: 3px;
+    rotate: 90deg;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 .bottomLeftCornerImage {
-    rotate: 180deg;
+    bottom: 3px;
+    left: 3px;
+    rotate: 270deg;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+.bottomRightCornerImage {
     bottom: 3px;
     right: 3px;
+    rotate: 180deg;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
 }
 
 
