--- a/src/styles/_results.scss
+++ b/src/styles/_results.scss
@@ -1,47 +1,48 @@
-@media (min-width: 320px){
-    .wishContainer {
-        text-align: center;
-        background-color: $fontSecondary;
-        border: 5px solid $fontPrimary;
-        margin: 0 auto;
-        padding: 25px;
-        width: 80%;
-        box-shadow: 0 0 15px $fontPrimary;
-        position: relative;
-        h2 {
-            font-family: $headingFont;
-            font-size: 2.5rem;
-            padding: 10px;
-            text-transform: capitalize;
-        }
-
-        p {
-            font-family: $bodyFont;
-            font-size: 2rem;
-            padding: 20px 10px;
-            margin-bottom: 20px;
-        }
-
-        .resetWish {
-            font-family: $headingFont;
-            font-size: 2rem;
-            background-color: black;
-            color: $fontSecondary;
-            border: 3px solid $fontPrimary;
-            box-shadow: 0 0 5px $fontPrimary;
-            text-transform: uppercase;
-            padding: 10px 15px;
-            cursor: pointer;
-                &:active,
-                &:focus {
-                    background-color: $tertiaryColour;
-                    color: $fontPrimary;
-                }
-        }
+.wishContainer {
+    text-align: center;
+    background-color: $fontSecondary;
+    border: 5px solid $fontPrimary;
+    margin: 0 auto;
+    padding: 25px;
+    width: 80%;
+    box-shadow: 0 0 15px $fontPrimary;
+    position: relative;
+    h2 {
+        font-family: $headingFont;
+        font-size: 2.5rem;
+        padding: 10px;
+        text-transform: capitalize;
     }
-    
+    p {
+        font-family: $bodyFont;
+        font-size: 2rem;
+        padding: 20px 10px;
+        margin-bottom: 20px;
+    }
+    .resetWish {
+        font-family: $headingFont;
+        font-size: 2rem;
+        font-weight: bold;
+        letter-spacing: 4px;
+        line-height: 3rem;
+        background-color: $fontPrimary;
+        color: $fontSecondary;
+        border: 3px solid $fontPrimary;
+        box-shadow: 0 0 5px $fontPrimary;
+        transition: 0.3s linear;
+        text-transform: uppercase;
+        padding: 10px 15px;
+        margin-bottom: 40px;
+        cursor: pointer;
+            &:active,
+            &:focus {
+                background-color: $tertiaryColour;
+                color: $fontPrimary;
+            }
+    }
 }
- 
+
+
 @media (min-width: 768px){
     .wishContainer {
         h2 {
@@ -55,6 +56,7 @@
 
         .resetWish {
             font-size: 2.5rem;
+            padding: 15px 30px;
             &:hover{
                 background-color: $tertiaryColour;
                 color: $fontPrimary;
